feat: 实现课程全景门户与接入治理、AI辅助课程生成工具、系统菜单持久化及Mermaid图表体验升级
1. 【课程全景门户与教学目标体系 (Course Overview Portal & Objectives)】
   - 数据库新增 V2_2_4__course_overview_portal.sql，包含课程教学目标表、讲师简介表与课程公告表
   - 后端新增全景门户数据模型与业务服务（CourseOverviewController / CourseOverviewService / Converter / DAO / Mapper / DTO / VO）
   - 在 edu-mind-course-api 中抽象并暴露统一课程访问控制接口（CourseAccessApi / CourseAccessApiImpl）
   - 新增课程全景集成测试（CourseOverviewPortalIntegrationTest）
   - 前端新增课程概览专用 API、类型与 Composables（useCourseOverview / useCourseEditable）及子组件群（components/course/overview/）

2. 【AI 课程建设辅助智能工具 (AI Course Copilot Tools)】
   - 后端新增课程大纲与简介 AI 智能生成建议服务（CourseDescriptionSuggestController / Service / DTO / VO）
   - 后端新增基于布鲁姆认知模型的课程教学目标 AI 推荐与拆解服务（CourseObjectiveSuggestController / Service / DTO / VO）
   - 前端完成对应智能工具接口对接（api/ai/course-profile / course-objectives）

3. 【系统动态菜单真实数据库持久化与权限树 (Sys Menu Persistent Management)】
   - 数据库新增 V2_2_5__sys_menu.sql，建立标准化系统菜单与路由规则表结构
   - 后端实现系统动态菜单管理全生命周期闭环（SysMenuController / SysMenuService / SysMenuDao / Mapper / Entity）
   - 新增菜单管理集成测试套件（MenuManageIntegrationTest）
   - 前端菜单管理界面（views/system/menu/index.vue）全面对接真实后端服务（menu-service.ts）

4. 【前端 Mermaid 流程图弹窗、AI 树状图与全局样式脚手架 (UI & Visualization)】
   - 新增 Mermaid 流程图全屏高清查看器弹窗（MermaidViewerModal.vue）
   - 新增 ASCII 认知结构树状图工具（ascii-tree-graph.ts）与 AI 诊断抽屉（AiDiagnosisDrawer.vue）
   - 规范化抽象页面 SCSS 样式脚手架（ai-teaching-page-shell / profile-page-shell / assistant-markdown-surface / reasoning-markdown）
   - 深度精修个人中心、安全设置、偏好设置与通知中心等多处视觉与交互细节

5. 【AI 流式处理稳健性测试与质量保障 (Stream Service & Tests)】
   - 新增 stream-service.spec.ts 流式响应单测，确保 SSE 消息拆分、状态重置与异常降级的高鲁棒性
   - 前端测试套件扩增至 48 个测试文件，265 个 Vitest 单元测试保持 100% 绿色通过